--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,9 @@ runs:
       run: |
         echo "deb [trusted=yes] https://packages.twingate.com/apt/ /" | sudo tee /etc/apt/sources.list.d/twingate.list
         sudo apt-get update -o Dir::Etc::sourcelist="sources.list.d/twingate.list" -o Dir::Etc::sourceparts="-" -o APT::Get::List-Cleanup="0"
+        sudo apt update
         sudo apt install -yq twingate
+        sudo twingate --version
     - name: Setup and start Twingate
       shell: bash
       run: |
@@ -26,8 +28,8 @@ runs:
 
         while [ $n -lt $MAX_RETRIES ]; do
           echo "Starting Twingate service..."
-          sudo twingate start
-
+          sudo twingate start | tee twingate.log
+          sudo cat twingate.log
           echo "Waiting $WAIT_TIME seconds for Twingate service to start..."
           sleep $WAIT_TIME
 
