--- a/action.yml
+++ b/action.yml
@@ -22,17 +22,20 @@ runs:
       shell: bash
       run: |
         echo '${{ inputs.service-key }}' | sudo twingate setup --headless=-
+        sudo twingate status
         sudo twingate config log-level debug
+        curl -I https://billhop.twingate.com
+        ping -c 4 billhop.twingate.com
 
         MAX_RETRIES=5
         WAIT_TIME=5
         n=0
-
+        echo "$(id -un) ALL=(ALL) NOPASSWD:/usr/bin/twingate start" | sudo tee /etc/sudoers.d/$(id -un)-twingate
+        sudo chmod 0440 /etc/sudoers.d/$(id -un)-twingate
         while [ $n -lt $MAX_RETRIES ]; do
           echo "Starting Twingate service..."
           set +e
-          echo "$(id -un) ALL=(ALL) NOPASSWD:/usr/bin/twingate start" | sudo tee /etc/sudoers.d/$(id -un)-twingate
-          sudo chmod 0440 /etc/sudoers.d/$(id -un)-twingate
+          
           echo "Waiting $WAIT_TIME seconds for Twingate service to start..."
           sleep $WAIT_TIME
 
@@ -52,7 +55,7 @@ runs:
           echo "Twingate service is not connected. Retrying ..."
         done
 
-        ls -la /var/log/twingated.log && cat /var/log/twingated.log
+        sudo cat /var/log/twingate/twingate.log
 
         if [ $n -eq $MAX_RETRIES ]; then
           echo "Twingate service failed to connect."
