--- a/action.yml
+++ b/action.yml
@@ -30,8 +30,8 @@ runs:
 
         while [ $n -lt $MAX_RETRIES ]; do
           echo "Starting Twingate service..."
-          /usr/bin/twingate start
-          
+          sudo twingate start
+
           echo "Waiting $WAIT_TIME seconds for Twingate service to start..."
           sleep $WAIT_TIME
 
