--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,7 +6,7 @@ jobs:
     test:
         runs-on: ubuntu-latest
         steps:
-            - uses: twingate/github-action@v1
+            - uses: twingate/github-action@main
               with:
                 # The Twingate Service Key used to connect Twingate to the proper service
                 # Learn more about [Twingate Services](https://docs.twingate.com/docs/services)
