--- a/action.yml
+++ b/action.yml
@@ -13,31 +13,36 @@ runs:
     - name: Install Twingate
       shell: bash
       run: |
+        sudo apt update
         echo "deb [trusted=yes] https://packages.twingate.com/apt/ /" | sudo tee /etc/apt/sources.list.d/twingate.list
         sudo apt-get update -o Dir::Etc::sourcelist="sources.list.d/twingate.list" -o Dir::Etc::sourceparts="-" -o APT::Get::List-Cleanup="0"
         sudo apt install -yq twingate
     - name: Setup and start Twingate
       shell: bash
       run: |
-        echo '${{ inputs.service-key }}' | sudo twingate setup --headless=-
+        echo '${{ inputs.service-key }}' | sudo twingate setup --headless -
         MAX_RETRIES=5
         WAIT_TIME=5
         n=0
 
         while [ $n -lt $MAX_RETRIES ]; do
           echo "Starting Twingate service..."
+          set +xe
           sudo twingate start
 
           echo "Waiting $WAIT_TIME seconds for Twingate service to start..."
           sleep $WAIT_TIME
 
-          status=$(sudo twingate status)
+          status=$(twingate status)
+          echo "Twingate service status: '$status'"
 
           if [ "$status" = "online" ]; then
             echo "Twingate service is connected."
+            twingate resources
             break
           else
             sudo twingate stop
+            journalctl -u twingate --no-pager
           fi
 
           # Increment the retry counter and wait time
