--- a/action.yml
+++ b/action.yml
@@ -10,7 +10,15 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Install Twingate
+    - name: Error if unsupported runner.os
+      if: runner.os != 'Linux' && runner.os != 'Windows'
+      shell: bash
+      run: |
+        echo "Unsupported Runner OS: ${{ runner.os }}"
+        exit 1
+
+    - name: Install Twingate (Linux)
+      if: runner.os == 'Linux'
       shell: bash
       run: |
         sudo apt update
@@ -56,3 +64,17 @@ runs:
           echo "Twingate service failed to connect."
           exit 1
         fi
+
+    - name: Install and Start Twingate (Windows)
+      if: runner.os == 'Windows'
+      shell: powershell
+      run: |
+          Invoke-WebRequest https://api.twingate.com/download/windows?installer=msi -OutFile .\twingate_client.msi
+          Set-Content .\key.json  '${{ inputs.service-key }}'
+          $key_path = (Get-Item .\key.json | Resolve-Path).ProviderPath
+          .\twingate_client.msi service_secret=$key_path /qn
+          Start-Sleep -Seconds 30
+          Get-Service twingate.service
+          Start-Service twingate.service
+          Start-Sleep -Seconds 10
+          Get-Service twingate.service
