--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
         max-parallel: 1
         matrix:
           runs-on: [ubuntu-latest, ubuntu-24.04, ubuntu-22.04, ubuntu-20.04]
-      runs-on: ubuntu-latest
+      runs-on: ${{ matrix.runs-on }}
       steps:
         - uses: actions/checkout@v4
 
