--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,9 +9,18 @@ on:
 jobs:
     test:
       strategy:
-        max-parallel: 1
+        max-parallel: 4
         matrix:
           runs-on: [ubuntu-latest, ubuntu-24.04, ubuntu-22.04, ubuntu-20.04]
+          include:
+            - runs-on: ubuntu-latest
+              service_key: ${{ secrets.SERVICE_KEY }}
+            - runs-on: ubuntu-24.04
+              service_key: ${{ secrets.SERVICE_KEY1 }}
+            - runs-on: ubuntu-22.04
+              service_key: ${{ secrets.SERVICE_KEY2 }}
+            - runs-on: ubuntu-20.04
+              service-key: ${{ secrets.SERVICE_KEY3 }}
       runs-on: ${{ matrix.runs-on }}
       steps:
         - uses: actions/checkout@v4
@@ -24,7 +33,7 @@ jobs:
 
         - uses: ./.github/actions/test
           with:
-            service-key: ${{ secrets.SERVICE_KEY }}
+            service-key: ${{ matrix.service-key }}
 
         - name: (optional) Twingate logs
           run: journalctl -u twingate
