--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,13 +14,13 @@ jobs:
           runs-on: [ubuntu-latest, ubuntu-24.04, ubuntu-22.04, ubuntu-20.04]
           include:
             - runs-on: ubuntu-latest
-              service_key: SERVICE_KEY
+              service-key: SERVICE_KEY
             - runs-on: ubuntu-24.04
-              service_key: SERVICE_KEY1
+              service-key: SERVICE_KEY1
             - runs-on: ubuntu-22.04
-              service_key: SERVICE_KEY2
+              service-key: SERVICE_KEY2
             - runs-on: ubuntu-20.04
-              service_key: SERVICE_KEY3
+              service-key: SERVICE_KEY3
       runs-on: ${{ matrix.runs-on }}
       steps:
         - uses: actions/checkout@v4
