--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,31 +8,44 @@ on:
 
 jobs:
     test:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
+      strategy:
+        max-parallel: 4
+        matrix:
+          runs-on: [ubuntu-latest, ubuntu-24.04, ubuntu-22.04, ubuntu-20.04]
+          include:
+            - runs-on: ubuntu-latest
+              service-key: SERVICE_KEY
+            - runs-on: ubuntu-24.04
+              service-key: SERVICE_KEY1
+            - runs-on: ubuntu-22.04
+              service-key: SERVICE_KEY2
+            - runs-on: ubuntu-20.04
+              service-key: SERVICE_KEY3
+      runs-on: ${{ matrix.runs-on }}
+      steps:
+        - uses: actions/checkout@v4
 
-            - name: Move local action to folder where it can be tested
-              shell: bash
-              run: |
-                mkdir -p .github/actions/test
-                cp action.yml .github/actions/test/action.yml
+        - name: Move local action to folder where it can be tested
+          shell: bash
+          run: |
+            mkdir -p .github/actions/test
+            cp action.yml .github/actions/test/action.yml
 
-            - uses: ./.github/actions/test
-              with:
-                service-key: ${{ secrets.SERVICE_KEY }}
+        - uses: ./.github/actions/test
+          with:
+            service-key: ${{ secrets[matrix.service-key] }}
 
-            - name: (optional) Twingate logs
-              run: journalctl -u twingate
+        - name: (optional) Twingate logs
+          run: journalctl -u twingate
 
-            - name: (optional) Twingate status
-              run: twingate status
-                
-            - name: Access a secure resource
-              env:
-                TEST_URL: http://business.prod.beamreachinc.int/
-              run: |
-                echo Calling $TEST_URL 🚀
-                curl -v $TEST_URL
+        - name: (optional) Twingate status
+          run: twingate status
+            
+        - name: Access a secure resource
+          env:
+            TEST_URL: http://business.prod.beamreachinc.int/
+          run: |
+            echo Calling $TEST_URL 🚀
+            curl -v $TEST_URL
 
-            - run: echo "SUCCESS!!! 🤩 This job's status is ${{ job.status }}."
+        - run: echo "SUCCESS!!! 🤩 This job's status is ${{ job.status }}."
