--- a/action.yml
+++ b/action.yml
@@ -76,10 +76,8 @@ runs:
           Set-Content .\key.json  '${{ inputs.service-key }}'
           $key_path = (Get-Item .\key.json | Resolve-Path).ProviderPath
 
-          .\twingate_client.msi service_secret=$key_path /qn
+          Start-Process msiexec.exe -Wait -ArgumentList "/i twingate_client.msi service_secret=$key_path /quiet"
           
-          Start-Sleep -Seconds 30
           Get-Service twingate.service
-          Start-Service twingate.service
           Start-Sleep -Seconds 10
           Get-Service twingate.service
