--- a/action.yml
+++ b/action.yml
@@ -79,5 +79,6 @@ runs:
           Start-Process msiexec.exe -Wait -ArgumentList "/i twingate_client.msi service_secret=$key_path /quiet"
           
           Get-Service twingate.service
-          Start-Sleep -Seconds 10
+          Start-Service twingate.service
+          Start-Sleep -Seconds 20
           Get-Service twingate.service
