--- a/action.yml
+++ b/action.yml
@@ -82,3 +82,4 @@ runs:
           Start-Service twingate.service
           Start-Sleep -Seconds 30
           Get-Service twingate.service
+          Get-Content -Path "$env:PROGRAMDATA\Twingate\logs\twingate.service.log"
