--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -75,7 +75,7 @@ jobs:
 
         - name: print logs
           shell: powershell
-          when: always
+          if: always()
           run: Get-Content "$env:PROGRAMDATA\Twingate\logs\twingate.service.log"
 
         - shell: powershell
