--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ on:
             - 'main'
 
 jobs:
-    test:
+    test-linux:
       strategy:
         max-parallel: 4
         matrix:
@@ -49,3 +49,47 @@ jobs:
             curl -v $TEST_URL
 
         - run: echo "SUCCESS!!! 🤩 This job's status is ${{ job.status }}."
+
+    test-windows:
+      strategy:
+        max-parallel: 4
+        matrix:
+          runs-on: [windows-latest, windows-2025, windows-2022, windows-2019]
+          include:
+            - runs-on: windows-latest
+              service-key: SERVICE_KEY_WIN1
+            - runs-on: windows-2025
+              service-key: SERVICE_KEY_WIN2
+            - runs-on: windows-2022
+              service-key: SERVICE_KEY_WIN3
+            - runs-on: windows-2019
+              service-key: SERVICE_KEY_WIN4
+      runs-on: ${{ matrix.runs-on }}
+      steps:
+        - uses: actions/checkout@v4
+
+        - name: Move local action to folder where it can be tested
+          shell: powershell
+          run: |
+            New-Item -Path ".github/actions/test" -ItemType Directory -Force
+            Copy-Item -Path "action.yml" -Destination ".github/actions/test/action.yml" -Force
+
+        - uses: ./.github/actions/test
+          with:
+            service-key: ${{ secrets[matrix.service-key] }}
+  
+        - name: Access a secure resource
+          shell: powershell
+          env:
+            TEST_URL: http://business.prod.beamreachinc.int/
+          run: |
+            Write-Host "Calling $env:TEST_URL 🚀"
+            Invoke-WebRequest -Uri $env:TEST_URL -Verbose
+
+        - name: Print client logs
+          shell: powershell
+          if: always()
+          run: Get-Content "$env:PROGRAMDATA\Twingate\logs\twingate.service.log"
+
+        - shell: powershell
+          run: Write-Host "SUCCESS!!! 🤩 This job's status is ${{ job.status }}."
