--- a/action.yml
+++ b/action.yml
@@ -38,7 +38,7 @@ runs:
         while [ $n -lt $MAX_RETRIES ]; do
           echo "Starting Twingate service..."
           set +xe
-          sudo twingate start
+          twingate start
 
           echo "Waiting $WAIT_TIME seconds for Twingate service to start..."
           sleep $WAIT_TIME
@@ -51,7 +51,7 @@ runs:
             twingate resources
             break
           else
-            sudo twingate stop
+            twingate stop
             journalctl -u twingate --no-pager
           fi
 
