--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,6 +49,8 @@ jobs:
           run: |
             nslookup $TEST_URL
 
+        - run: cat /etc/resolv.conf
+
         - name: Access a secure resource
           env:
             TEST_URL: http://business.prod.beamreachinc.int/
