--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -70,7 +70,7 @@ jobs:
           uses: docker://alpine:latest
           with:
             entrypoint: /bin/sh
-            args: -c "sed -i 's/^nameserver 168.63.129.16/#nameserver 168.63.129.16/' /etc/resolv.conf && apk update && apk add curl && cat /etc/resolv.conf && curl -v http://business.prod.beamreachinc.int/"
+            args: -c "apk update && apk add curl && cat /etc/resolv.conf && curl -v http://business.prod.beamreachinc.int/"
 
         - name: Print client logs
           if: always()
