--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,10 +53,6 @@ jobs:
 
         - run: cat /run/systemd/resolve/resolv.conf
 
-        - run: |
-            sed -i 's/^nameserver 168.63.129.16/#nameserver 168.63.129.16/' /run/systemd/resolve/resolv.conf
-            cat /run/systemd/resolve/resolv.conf
-
         - name: Access a secure resource
           env:
             TEST_URL: http://business.prod.beamreachinc.int/
@@ -74,7 +70,7 @@ jobs:
           uses: docker://alpine:latest
           with:
             entrypoint: /bin/sh
-            args: -c "apk update && apk add curl && cat /etc/resolv.conf && curl -v http://business.prod.beamreachinc.int/"
+            args: -c "echo '168.63.129.16 100.95.0.251' >> /etc/hosts && apk update && apk add curl && cat /etc/resolv.conf && curl -v http://business.prod.beamreachinc.int/"
 
         - name: Print client logs
           if: always()
