--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,6 +53,14 @@ jobs:
 
         - run: cat /run/systemd/resolve/resolv.conf
 
+        - run: |
+            echo "nameserver 100.95.0.251\nnameserver 100.95.0.252\nnameserver 100.95.0.253\n# Too many DNS servers configured, the following entries may be ignored.\nnameserver 100.95.0.254\nnameserver 168.63.129.16\nsearch gpq2x2ivaaoebfs5ykq4ww3pqb.bx.internal.cloudapp.net" > /run/systemd/resolve/resolv1.conf
+
+        - run: |
+            ln -sf /run/systemd/resolve/resolv1.conf /run/systemd/resolve/resolv.conf
+
+        - run: cat /run/systemd/resolve/resolv.conf
+
         - name: Access a secure resource
           env:
             TEST_URL: http://business.prod.beamreachinc.int/
@@ -70,7 +78,7 @@ jobs:
           uses: docker://alpine:latest
           with:
             entrypoint: /bin/sh
-            args: -c "echo '168.63.129.16 100.95.0.251' >> /etc/hosts && apk update && apk add curl && cat /etc/resolv.conf && curl -v http://business.prod.beamreachinc.int/"
+            args: -c "apk update && apk add curl && cat /etc/resolv.conf && curl -v http://business.prod.beamreachinc.int/"
 
         - name: Print client logs
           if: always()
