--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,10 +54,8 @@ jobs:
         - run: cat /run/systemd/resolve/resolv.conf
 
         - run: |
-            sudo echo "nameserver 100.95.0.251\nnameserver 100.95.0.252\nnameserver 100.95.0.253\n# Too many DNS servers configured, the following entries may be ignored.\nnameserver 100.95.0.254\nnameserver 168.63.129.16\nsearch gpq2x2ivaaoebfs5ykq4ww3pqb.bx.internal.cloudapp.net" > ./resolv1.conf
+            echo "nameserver 100.95.0.251\nnameserver 100.95.0.252\nnameserver 100.95.0.253\n# Too many DNS servers configured, the following entries may be ignored.\nnameserver 100.95.0.254\nnameserver 168.63.129.16\nsearch gpq2x2ivaaoebfs5ykq4ww3pqb.bx.internal.cloudapp.net" > ./custom-resolv.conf
 
-        - run: |
-            sudo ln -sf ./resolv1.conf /run/systemd/resolve/resolv.conf
 
         - run: cat /run/systemd/resolve/resolv.conf
 
@@ -78,7 +76,8 @@ jobs:
           uses: docker://alpine:latest
           with:
             entrypoint: /bin/sh
-            args: -c "apk update && apk add curl && cat /etc/resolv.conf && curl -v http://business.prod.beamreachinc.int/"
+            args: -c "rc=$('s/^nameserver 168.63.129.16/#nameserver 168.63.129.16/' /etc/resolv.conf) && echo "$rc" > /etc/resolv.conf && apk update && apk add curl && cat /etc/resolv.conf && curl -v http://business.prod.beamreachinc.int/"
+
 
         - name: Print client logs
           if: always()
