--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -76,7 +76,7 @@ jobs:
           uses: docker://alpine:latest
           with:
             entrypoint: /bin/sh
-            args: -c "rc=$(sed 's/^nameserver 168.63.129.16/#nameserver 168.63.129.16/' /etc/resolv.conf) && echo "$rc" > /etc/resolv.conf && apk update && apk add curl && cat /etc/resolv.conf && curl -v http://business.prod.beamreachinc.int/"
+            args: -c "rc=$(sed 's/^nameserver 168.63.129.16/#nameserver 168.63.129.16/' /etc/resolv.conf) && echo "$rc" > /etc/resolv.conf && cat /etc/resolv.conf && apk update && apk add curl && curl -v http://business.prod.beamreachinc.int/"
 
 
         - name: Print client logs
