--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,8 @@ jobs:
       strategy:
         max-parallel: 4
         matrix:
-          runs-on: [ubuntu-latest, ubuntu-24.04, ubuntu-22.04, ubuntu-24.04-arm, ubuntu-22.04-arm, macos-15]
+          # runs-on: [ubuntu-latest, ubuntu-24.04, ubuntu-22.04, ubuntu-24.04-arm, ubuntu-22.04-arm, macos-15]
+          runs-on: [macos-15]
           include:
             - runs-on: ubuntu-latest
               service-key: SERVICE_KEY
@@ -23,6 +24,9 @@ jobs:
               service-key: SERVICE_KEY_ARM1
             - runs-on: ubuntu-22.04-arm
               service-key: SERVICE_KEY_ARM2
+            - runs-on: macos-15
+              service-key: SERVICE_KEY
+
       runs-on: ${{ matrix.runs-on }}
       timeout-minutes: 3
       steps:
