try Apple's container

--- a/action.yml
+++ b/action.yml
@@ -92,12 +92,17 @@ runs:
           Start-Sleep -Seconds 14
           Get-Service twingate.service
 
-    - name: Setup Docker on macOS
-      uses: douglascamata/setup-docker-macos-action@v1
-      if: runner.os == 'macOS'
-
     - name: Install and Start Twingate (MacOS)
       if: runner.os == 'macOS'
       shell: bash
       run: |
+        echo "::group::Updating Homebrew"
+        brew update
+        echo "::endgroup::"
+
+        echo "::group::Installing Container"
+        brew install container
+        container system start
+        echo "::endgroup::"
+
         docker run -d -p 80:80 nginx:latest
