fix(action.yml): lock timeout
Getting process locks when running matrix in self hosted runner
```sh
Reading package lists...
E: Could not get lock /var/lib/apt/lists/lock. It is held by process 1147 (python)
E: Unable to lock directory /var/lib/apt/lists/
Error: Process completed with exit code 100.
```

--- a/action.yml
+++ b/action.yml
@@ -25,7 +25,7 @@ runs:
       if: runner.os == 'Linux'
       shell: bash
       run: |
-        sudo apt update
+        sudo apt -o DPkg::Lock::Timeout=90 update
         echo "deb [trusted=yes] https://packages.twingate.com/apt/ /" | sudo tee /etc/apt/sources.list.d/twingate.list
         sudo apt-get update -o Dir::Etc::sourcelist="sources.list.d/twingate.list" -o Dir::Etc::sourceparts="-" -o APT::Get::List-Cleanup="0"
         sudo apt install -yq twingate
