fix: wait forever for lock release, install

--- a/action.yml
+++ b/action.yml
@@ -27,8 +27,8 @@ runs:
       run: |
         sudo apt -o DPkg::Lock::Timeout=-1 update
         echo "deb [trusted=yes] https://packages.twingate.com/apt/ /" | sudo tee /etc/apt/sources.list.d/twingate.list
-        sudo apt-get update -o Dir::Etc::sourcelist="sources.list.d/twingate.list" -o Dir::Etc::sourceparts="-" -o APT::Get::List-Cleanup="0"
-        sudo apt install -yq twingate
+        sudo apt-get update -o DPkg::Lock::Timeout=-1 -o Dir::Etc::sourcelist="sources.list.d/twingate.list" -o Dir::Etc::sourceparts="-" -o APT::Get::List-Cleanup="0"
+        sudo apt -o DPkg::Lock::Timeout=-1 install -yq twingate
     
     - name: Setup and start Twingate (Linux)
       if: runner.os == 'Linux'
